Fix table images on mobile

--- a/assets/sass/_tables.scss
+++ b/assets/sass/_tables.scss
@@ -108,6 +108,7 @@ table.table {
             margin-top: 9px;
             height: 32px;
             max-width: none;
+            display: inline;
         }
 
         img.square {
@@ -121,10 +122,10 @@ table.table {
         }
 
         span {
-            display: inline-block;
+            display: inline;
             margin: .75rem 0 .75rem 9px;
-            vertical-align: top;
             font-size: 1rem;
+            vertical-align: middle;
         }
     }
 }
